--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -7,3 +7,11 @@
 @import "popup/popup.css";
 @import "urlbar/urlbar.css";
 @import "findbar/findbar.css";
+
+/* Workaround for vim-vixen issue
+ * https://github.com/ueokande/vim-vixen/issues/1424
+ */
+.vimvixen-console-frame {
+  height: 0px;
+  color-scheme: light !important;
+}
